2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GObject.xs
	* t/5.t: Fix the stack handling in Glib::Object::get to be robust
	against stack movement due to reallocation.  This can happen if a
	subclass' GET_PROPERTY triggers a stack resize.  Patch by Kevin
	Ryde.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.192.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm (postamble_docs_full): Fix the POD index
	generation.  For five months now, broken index pages (like
	Glib::index) were being created due to shell command quoting
	issues.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_convert_flag_one, gperl_convert_flags): Improve
	the wording of the error messages for invalid flags a bit.

	* t/4.t: Prettify a bit by using ok(), pass(), and fail()
	functions.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.191.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/e.t
	* GValue.xs (_gperl_sv_from_value_internal): Handle NULL
	GParamSpecs gracefully by returning undef.

	* GParamSpec.xs (newSVGParamSpec): Croak on NULL GParamSpecs.

2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs: Add hierarchy POD sections to the various
	Glib::ParamSpec subclasses.

2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm: Document how to hide arguments with "=for arg".  Cope
	with _noinc_ornull type variants.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GObject.xs (g_object_new): Check that we got a correct number of
	arguments.

	* t/2.t: Fix a typo uncovered by the above change.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: In the overloaded flags operators, don't choke on undef
	in the swap argument.  This happens when a normal 'x' operator is
	used for handling 'x='.  Patch by Kevin Ryde.
